--- a/css/footer.css
+++ b/css/footer.css
@@ -11,5 +11,6 @@ footer h6 {
     margin-top: 3%;
     text-align: center;
     font-size: 14px;
-    color: var(--white);
+    color: var(--yellow);
+    font-family: 'Roboto Condensed', sans-serif;
 }
